testdata/baselines/reference/submodule/conformance/jsDeclarationsExportAssignmentExpressionPlusSecondary.errors.txt
index.js(12,16): error TS2339: Property 'Strings' does not exist on type '{ thing: string; also: string; desc: { item: string; }; }'.


==== index.js (1 errors) ====
    const Strings = {
        a: "A",
        b: "B"
    };
    module.exports = {
        thing: "ok",
        also: "ok",
        desc: {
            item: "ok"
        }
    };
    module.exports.Strings = Strings;
                   ~~~~~~~
!!! error TS2339: Property 'Strings' does not exist on type '{ thing: string; also: string; desc: { item: string; }; }'.
    